<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFF6FE"
        tools:context=".ui.auth.SignUpFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:background="#27314B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:text="@string/myjobs"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/materialDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="20dp"
        android:background="#4D618E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

        <!--        <  -->


        <TextView
            android:id="@+id/backTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/back"
            android:clickable="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="22dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backTv">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:padding="29dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signup"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/i_m_a"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:id="@+id/radioBtns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:orientation="horizontal"
                        tools:layout_editor_absoluteY="116dp">

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/recruiterBtn"
                            android:layout_marginEnd="10dp"
                            android:stateListAnimator="@null"
                            android:button="@null"
                            app:icon="@drawable/research"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:backgroundTint="@color/white"
                            android:drawableTint="#43AFFF"
                            android:paddingStart="20dp"
                            app:iconTint="#43AFFF"
                            android:text="@string/recruiter"
                            android:textColor="@color/black"
                            app:strokeWidth="1dp"
                            app:strokeColor="#717171"
                            android:textAlignment="center"
                            android:textAllCaps="false" />

                        <com.google.android.material.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/candidateBtn"
                            android:layout_marginStart="10dp"
                            android:stateListAnimator="@null"
                            app:iconTint="@color/white"
                            android:enabled="true"
                            android:layout_weight="1"
                            android:textSize="12sp"
                            android:backgroundTint="#43AFFF"
                            app:icon="@drawable/candidates"
                            android:drawablePadding="2dp"
                            android:paddingLeft="20dp"
                            android:text="@string/candidate"
                            android:textAlignment="center"
                            app:strokeWidth="1dp"
                            app:strokeColor="#717171"
                            android:textAllCaps="false" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/full_name"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_your_full_name" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/email_address"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText20"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mailEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_your_email" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView70"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/create_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText22"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_your_password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/confirm_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText24"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_your_password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/skills"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText21"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/skillsEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_comma_separated_skills" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signupBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="38dp"
                        android:visibility="visible"
                        android:clickable="true"
                        android:backgroundTint="#43AFFF"
                        android:text="@string/signup"
                        android:textAllCaps="false" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:layout_marginTop="38dp"
                        android:layout_gravity="center"
                        android:indeterminateTint="@color/primary"
                        android:id="@+id/progressBar"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/have_an_account"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="60dp"
                            tools:layout_editor_absoluteY="409dp" />

                        <TextView
                            android:id="@+id/loginBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@string/login"
                            android:foreground="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:textColor="#43AFFF"
                            android:textSize="14sp"
                            tools:layout_editor_absoluteX="171dp"
                            tools:layout_editor_absoluteY="409dp" />

                    </LinearLayout>
                </LinearLayout>
            </ScrollView>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>