<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EFF6FE"
        tools:context=".ResetFragment">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:background="#27314B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:text="@string/myjobs"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fpsignupBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/textborder"
                android:padding="10dp"
                android:text="@string/login_signup"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="#4D618E"
            app:layout_constraintBaseline_toTopOf="@id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="65dp" />

        <!--        <  -->


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="21dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="93dp"
            android:layout_marginEnd="27dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="29dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_your_password"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        android:text="@string/enter_your_new_password_below"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/new_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText20"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints="emailAddress"
                            android:hint="@string/enter_your_password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/textView141"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:text="@string/new_confirm_new_password"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/textInputEditText240"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="14dp"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="130dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPasswordEt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_your_password" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/resetBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="38dp"
                        android:backgroundTint="#43AFFF"
                        android:text="@string/reset"
                        android:textAllCaps="false"
                        tools:layout_editor_absoluteX="32dp"
                        tools:layout_editor_absoluteY="333dp" />

                </LinearLayout>
            </ScrollView>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>